[tool.poetry]
name = "seai_deap"
version = "0.1.4"
description = "A re-implementation of SEAI's DEAP 4.2.2 in Python"
authors = ["Rowan Molony <rowan.molony@codema.ie>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
numpy = "^1.19.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
